# front_raw_mystore

./: Cargo.toml  index.html  index.js  package-lock.json  package.json  webpack.config.js
public/templates/: register.html
src/: app.rs  fetch.rs  lib.rs  router.rs
src/components/: component.rs  dashboard.rs  home.rs  login.rs  mod.rs  register.rs  routes.rs
src/javascripts/: router.js
src/templates/: register.html
